--- a/404.html
+++ b/404.html
@@ -18,7 +18,7 @@
 </head>
 <body>
   <h1>404 - Page introuvable</h1>
-  <p>La page que vous cherchez n'existe pas ou a été déplacée.</p>
+  <p>La page que vous cherchez n'existe pas ou a été déplacée. CACA</p>
   <a href="/">Retour à l'accueil</a>
 </body>
 </html>
