--- a/404.html
+++ b/404.html
@@ -3,6 +3,8 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
+  <meta name="robots" content="noindex, nofollow">
+  <link rel="icon" type="image/png" href="/logo_onglet.png">
   <title>404 - Page non trouvée</title>
   <style>
     body {
