--- a/balls/index.html
+++ b/balls/index.html
@@ -3,7 +3,9 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>Version fluide</title>
+  <meta name="robots" content="noindex, nofollow">
+  <link rel="icon" type="image/png" href="/logo_onglet.png">
+  <title>Balles</title>
   <style>
     body, html {
       margin: 0;
