--- a/cleaner/index.html
+++ b/cleaner/index.html
@@ -5,7 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="robots" content="noindex, nofollow">
 
-  <title>Nettoyeur de texte - Glass Design</title>
+  <title>Nettoyeur de texte </title>
+  <link rel="icon" type="image/png" href="logo.png">
   <style>
     * {
       margin: 0;
