--- a/test/index.html
+++ b/test/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/png" href="/logo_onglet.png">
+  <link rel="icon" type="image/png" href="/logo_onglet.png">
   <meta name="robots" content="noindex, nofollow">
   <title>melroi.fr</title>
   <style>
@@ -23,6 +23,6 @@
 </head>
 <body>
   <h1>Bienvenue sur melroi.fr</h1>
-  <p>Site en construction.</p>
+  <p>Site en teste stetstst t st t st st st t st et te t t t t st et.</p>
 </body>
 </html>
