--- a/sae/infra.html
+++ b/sae/infra.html
@@ -186,7 +186,7 @@
       <ul>
         <li>Panneau de configuration → Réseau → Modifier adapteur.</li>
         <li>Clic droit Ethernet → Propriétés → IPv4 → Propriétés.</li>
-        <li>IP : 192.168.0.200, Masque : 255.255.255.0, Passerelle : 192.168.0.1, DNS : 192.168.117.181.</li>
+      
       </ul>
     </li>
     <li>Installer rôles : Active Directory, DHCP, DNS, Web Server (IIS).</li>
@@ -220,7 +220,7 @@
       Nom de la machine et domaine :<br>
       <ul>
         <li>Nom d’hôte (hostname) : srv-debian</li>
-        <li>Domaine : garage.local</li>
+        <li>Domaine : patate.local</li>
       </ul>
     </li>
 
@@ -228,7 +228,7 @@
       Utilisateurs et mots de passe :<br>
       <ul>
         <li>Mot de passe root (administrateur complet)</li>
-        <li>Créer un utilisateur classique, par exemple : admin</li>
+        <li>Créer un utilisateur classique, par exemple </li>
         <li>Définir un mot de passe fort pour cet utilisateur</li>
       </ul>
     </li>
