--- a/lag/index.html
+++ b/lag/index.html
@@ -2,6 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
+  <meta name="robots" content="noindex, nofollow">
   <link rel="icon" type="image/png" href="/logo_onglet.png">
   <title>Benchmark Reproductif ++</title>
   <style>
