--- a/sae/ftp.html
+++ b/sae/ftp.html
@@ -14,7 +14,7 @@
   </div>
   <div class="haut">
     <h1>Compte-rendu projet</h1>
-    <p>QUENET Noa - LAFILOLIE Lilian - HADROT Melchior - SALIÈGE Tom - ASSSAILLY Allan</p>
+    <p>QUENET Noa - LAFILOLIE Lilian - HADROT Melchior - SALIÈGE Tom - ASSAILLY Allan</p>
   </div>
 </header>
 
@@ -127,9 +127,9 @@
       <br>
       <p>On tape la commande suivante :</p>
       <br>
-      <p><code>adduser rhftp</code></p>
+      <p><code>adduser rh</code></p>
       <br>
-      <p>Un dossier personnel est automatiquement créé : <code>/home/rhftp</code></p>
+      <p>Un dossier personnel est automatiquement créé : <code>/home/rh</code></p>
     </section>
   </main>
 
