--- a/sae/apache.html
+++ b/sae/apache.html
@@ -15,7 +15,7 @@
     </div>
     <div class="haut">
       <h1>Compte-rendu projet</h1>
-      <p>QUENET Noa - LAFILOLIE Lilian - HADROT Melchior - SALIEGE Tom - ASSSAILLY Allan</p>
+      <p>QUENET Noa - LAFILOLIE Lilian - HADROT Melchior - SALIEGE Tom - ASSAILLY Allan</p>
     </div>
   </header>
 
@@ -138,12 +138,7 @@
       <p>Puis :</p>
       <p>systemctl restart apache2</p>
     </section>
-    <br>
-    <section class="content">
-      <h3>4ème étape : configuration base MySQL</h3>
-      <p>On commence par installer le paquet wget avec la commande :</p>
-      <p>apt install wget</p>
-    </section>
+
   </main>
 
   <footer>
