--- a/sae/dns.html
+++ b/sae/dns.html
@@ -14,7 +14,7 @@
   </div>
   <div class="haut">
     <h1>Compte-rendu projet</h1>
-    <p>QUENET Noa - LAFILOLIE Lilian - HADROT Melchior - SALIÈGE Tom - ASSSAILLY Allan</p>
+    <p>QUENET Noa - LAFILOLIE Lilian - HADROT Melchior - SALIÈGE Tom - ASSAILLY Allan</p>
   </div>
 </header>
 
