--- a/index.html
+++ b/index.html
@@ -19,10 +19,24 @@
     p {
       color: #777;
     }
+    .big-link {
+      display: inline-block;
+      margin-top: 40px;
+      font-size: 2.2rem;
+      color: #1976d2;
+      text-decoration: underline;
+      font-weight: bold;
+      transition: color 0.2s;
+    }
+    .big-link:hover {
+      color: #0d47a1;
+      text-decoration: underline;
+    }
   </style>
 </head>
 <body>
   <h1>Bienvenue sur melroi.fr</h1>
   <p>Site en construction.</p>
+  <a href="sae/tel.html" class="big-link">Accéder à la page SAE</a>
 </body>
 </html>
