--- a/index.html
+++ b/index.html
@@ -37,6 +37,6 @@
 <body>
   <h1>Bienvenue sur melroi.fr</h1>
   <p>Site en construction.</p>
-  <a href="sae/tel.html" class="big-link">Accéder à la page SAE</a>
+  <a href="sae/infra.html" class="big-link">Accéder à la page SAE</a>
 </body>
 </html>
