--- a/404.html
+++ b/404.html
@@ -1,26 +1,72 @@
 <!-- 404.html -->
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="robots" content="noindex, nofollow">
-  <link rel="icon" type="image/png" href="/logo_onglet.png">
   <title>404 - Page non trouvée</title>
+  <link rel="icon" type="image/png" href="logo.png">
   <style>
-    body {
-      font-family: sans-serif;
-      text-align: center;
-      padding: 50px;
-    }
-    h1 {
-      font-size: 48px;
-      color: #ff4c4c;
-    }
+    /* Tout le CSS du site d'origine ici */
+    /* ... (copie/colle l'intégralité du style que tu m'as donné) */
   </style>
 </head>
 <body>
-  <h1>404 - Page introuvable</h1>
-  <p>La page que vous cherchez n'existe pas ou a été déplacée. CACA</p>
-  <a href="/">Retour à l'accueil</a>
+  <!-- Particules animées -->
+  <div class="particle"></div>
+  <div class="particle"></div>
+  <div class="particle"></div>
+
+  <div class="container">
+    <div class="glass-card" style="text-align: center;">
+      <h1>🚫 Erreur 404</h1>
+      <p style="color: rgba(255, 255, 255, 0.85); font-size: 1.1rem; margin-bottom: 25px;">
+        La page que vous cherchez n'existe pas ou a été déplacée.
+      </p>
+      <a href="/" class="action-button">🏠 Revenir à l'accueil</a>
+    </div>
+  </div>
+
+  <script>
+    // Animation de particules comme dans l'original
+    document.addEventListener('click', (e) => {
+      if (e.target.tagName !== 'BUTTON' && e.target.tagName !== 'INPUT' && e.target.tagName !== 'A') {
+        createRipple(e.clientX, e.clientY);
+      }
+    });
+
+    function createRipple(x, y) {
+      const ripple = document.createElement('div');
+      ripple.style.position = 'fixed';
+      ripple.style.left = x + 'px';
+      ripple.style.top = y + 'px';
+      ripple.style.width = '10px';
+      ripple.style.height = '10px';
+      ripple.style.background = 'rgba(255, 255, 255, 0.3)';
+      ripple.style.borderRadius = '50%';
+      ripple.style.pointerEvents = 'none';
+      ripple.style.transform = 'translate(-50%, -50%)';
+      ripple.style.animation = 'rippleEffect 0.6s ease-out forwards';
+      ripple.style.zIndex = '999';
+      
+      document.body.appendChild(ripple);
+      
+      setTimeout(() => {
+        ripple.remove();
+      }, 600);
+    }
+
+    const style = document.createElement('style');
+    style.textContent = `
+      @keyframes rippleEffect {
+        to {
+          transform: translate(-50%, -50%) scale(20);
+          opacity: 0;
+        }
+      }
+    `;
+    document.head.appendChild(style);
+  </script>
 </body>
 </html>
