--- a/fate/index.html
+++ b/fate/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Prochain épisode de Fate/Strange Fake dans :</h1>
+  <h1>Fate/Strange Fake dans :</h1>
   <div id="timer">Chargement...</div>
 
   <img id="dvd" src="image2.png" alt="DVD Logo" />
