--- a/fate/index.html
+++ b/fate/index.html
@@ -10,7 +10,7 @@
   <h1>Fate/Strange Fake dans :</h1>
   <div id="timer">Chargement...</div>
 
-  <img id="dvd" src="image2.png" alt="DVD Logo" />
+  <img id="dvd" src="image1.png" alt="DVD" />
 
   <script src="script.js"></script>
 </body>
