--- a/cleaner/index.html
+++ b/cleaner/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 
-<h1>Nettoyeur de texte avancé</h1>
+<h1>Nettoyeur de texte v2</h1>
 
 <label for="input">Texte à nettoyer :</label>
 <textarea id="input" placeholder="Collez votre texte ici..."></textarea>
