--- a/cleaner/index.html
+++ b/cleaner/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Nettoyeur de texte V2 </title>
+<title>Nettoyeur de texte </title>
 <style>
   body { font-family: sans-serif; padding: 20px; background: #f5f5f5; }
   textarea { width: 100%; min-height: 100px; margin-bottom: 10px; padding: 10px; font-size: 1rem; white-space: pre-wrap; }
@@ -14,7 +14,7 @@
 </head>
 <body>
 
-<h1>Nettoyeur de texte v2.1</h1>
+<h1>Nettoyeur de texte v2.2</h1>
 
 <label for="input">Texte à nettoyer :</label>
 <textarea id="input" placeholder="Collez votre texte ici..."></textarea>
