--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -7,7 +7,7 @@
     <title>Melchior HADROT</title>
     <link rel="stylesheet" href="styles.css">
     <script src="script.js" defer></script>
-    <link rel="icon" href="assets/icons/icon_logo.svg">
+    <link rel="icon" href="assets/image/icon/pfp.png">
 </head>
 
 <body>
@@ -111,22 +111,22 @@
             <div class="skills-container">
                 <div class="skill-box">
                     <h3>Esprit d'équipe</h3>
-                    <img src="\assets\image\icon\team410x230.jpg" alt="Travail en équipe" class="skill-icon" width="115" height="60">
+                    <img src="assets/image/icon/team410x230.jpg" alt="Travail en équipe" class="skill-icon" width="115" height="60">
                     <p>Je sais travailler efficacement en équipe et communiquer avec mes collègues</p>
                 </div>
                 <div class="skill-box">
                     <h3>Débrouillard</h3>
-                    <img src="/assets/image/icon/gear5000x5000.png" alt="Communication" class="skill-icon" width="60" height="60">
+                    <img src="assets/image/icon/gear5000x5000.png" alt="Communication" class="skill-icon" width="60" height="60">
                     <p>Je m'adapte rapidement aux nouvelles situations et trouve des solutions créatives</p>
                 </div>
                 <div class="skill-box">
                     <h3>Pédagogue</h3>
-                    <img src="/assets/image/icon/teacher.png" alt="Organisation" class="skill-icon" width="60" height="60">
+                    <img src="assets/image/icon/teacher.png" alt="Organisation" class="skill-icon" width="60" height="60">
                     <p>J'aime partager mes connaissances et expliquer de manière claire et accessible</p>
                 </div>
                 <div class="skill-box">
                     <h3>Patient</h3>
-                    <img src="/assets/image/icon/sun.png" alt="Optimisme" class="skill-icon"width="60" height="60">
+                    <img src="assets/image/icon/sun.png" alt="Optimisme" class="skill-icon"width="60" height="60">
                     <p>Je reste calme face aux défis et persévère jusqu'à atteindre mes objectifs</p>
                 </div>
             </div>
@@ -241,22 +241,22 @@
                                     <h3>Lecture</h3>
                                     <p>Passionné par les œuvres de science-fiction et les mangas.</p>
                                 </div>
-                                <img src="/assets/image/icon/1984.jpg" alt="Placeholder Image" class="divers-icon" width="90" height="160" />
-                                <img src="/assets/image/icon/berserk.jpg" alt="Placeholder Image" class="divers-icon" width="110" height="160" />
+                                <img src="assets/image/icon/1984.jpg" alt="Placeholder Image" class="divers-icon" width="90" height="160" />
+                                <img src="assets/image/icon/berserk.jpg" alt="Placeholder Image" class="divers-icon" width="110" height="160" />
                             </div>
                             <div class="divers-box">
                                 <div>
                                     <h3>Cuisine</h3>
                                     <p>Préparation régulière de plats et pâtisseries pour ma famille.</p>
                                 </div>
-                                <img src="/assets/image/icon/cuisine.png" alt="Placeholder Image" class="divers-icon" width="250" height="160" />
+                                <img src="assets/image/icon/cuisine.png" alt="Placeholder Image" class="divers-icon" width="250" height="160" />
                             </div>
                             <div class="divers-box">
                                 <div>
                                     <h3>Impression 3D</h3>
                                     <p>Modélisation et impression 3D</p>
                                 </div>
-                                <img src="/assets/image/icon/imprimante3d.png" alt="Placeholder Image" class="divers-icon" width="110" height="160" />
+                                <img src="assets/image/icon/imprimante3d.png" alt="Placeholder Image" class="divers-icon" width="110" height="160" />
                             </div>
                                                                                  
                         </div>
@@ -272,7 +272,7 @@
                                 Accéder au projet
                             </button>
                         </div>
-                        <img src="/assets/image/icon/icon_sae15.png" alt="icone sae 15" class="projet-icon" />
+                        <img src="assets/image/icon/icon_sae15.png" alt="icone sae 15" class="projet-icon" />
                     </div>
                     <div class="cv-section">
                         <div class="cv-content">
@@ -282,7 +282,7 @@
                                 Accéder au projet
                             </button>
                         </div>
-                        <img src="/assets/image/icon/icon_telephonie.png" alt="icone tele" class="projet-icon" width="110" height="160" />
+                        <img src="assets/image/icon/icon_telephonie.png" alt="icone tele" class="projet-icon" width="110" height="160" />
                     </div>
                     <div class="cv-section">
                         <div class="cv-content">
@@ -292,7 +292,7 @@
                                 Accéder au projet
                             </button>
                         </div>
-                        <img src="/assets/image/icon/ftp.jpg" alt="icone tele" class="projet-icon" width="110" height="160" />
+                        <img src="assets/image/icon/ftp.jpg" alt="icone tele" class="projet-icon" width="110" height="160" />
                     </div>
                 </div>
 
