--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -270,14 +270,11 @@
                         <button class="proj-tab active" data-tab="iut">Projets IUT</button>
                         <button class="proj-tab" data-tab="perso">Projets Personnels</button>
                     </div>
-                    
                     <!-- Section du carrousel -->
                     <div class="projects-carousel">
                         <button class="carousel-button prev">&lt;</button>
                         <div class="carousel-container">
-                            <div class="carousel-wrapper">
-                                <!-- Les projets seront injectés ici par JavaScript -->
-                            </div>
+                            <div class="carousel-wrapper"></div>
                         </div>
                         <button class="carousel-button next">&gt;</button>
                     </div>
@@ -293,7 +290,7 @@
                                     Télécharger mon CV
                                 </button>
                             </div>
-                            <img src="/assets/image/icon/icon_CV_01_2025.jpg" alt="Aperçu du CV" class="cv-preview" />
+                            <img src="portfolio\assets\image\icon\icon_CV_01_2025.jpg" alt="Aperçu du CV" class="cv-preview" />
                         </div>
                     </div>
                 </div>
@@ -311,5 +308,4 @@
         </div>
     </div>
 </body>
-
-</html>
+</body></html>
