--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -275,7 +275,7 @@
                                     Télécharger mon CV
                                 </button>
                             </div>
-                            <img src="portfolio\assets\image\icon\icon_CV.jpg" alt="Aperçu du CV" class="cv-preview" />
+                            <img src="assets\image\icon\icon_cv.jpg" alt="Aperçu du CV" class="cv-preview" />
                         </div>
                     </div>
                 </div>
