--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -5,17 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Melchior HADROT</title>
-    <link rel="stylesheet" href="styles.css">
-    <script src="script.js" defer></script>
-    <script src="carousel.js" defer></script>
-    <link rel="icon" href="assets/image/icon/favicon.png">
+    <link rel="stylesheet" href="/portfolio/styles.css">
+    <script src="/portfolio/script.js" defer></script>
+    <script src="/portfolio/carousel.js" defer></script>
+    <link rel="icon" href="/portfolio/assets/image/icon/favicon.png">
 </head>
 
 <body>
     <div class="main-container">
         <!-- Bannière fixe -->
         <div class="banner">
-            <img src="assets/image/icon/hamburger1000x1000.png" alt="Menu" width="40px" onclick="openNav()">
+            <img src="/portfolio/assets/image/icon/hamburger1000x1000.png" alt="Menu" width="40px" onclick="openNav()">
             <h1>Portfolio</h1>
         </div>
 
@@ -275,7 +275,7 @@
                                     Télécharger mon CV
                                 </button>
                             </div>
-                            <img src="assets\image\icon\icon_cv.jpg" alt="Aperçu du CV" class="cv-preview" />
+                            <img src="/portfolio/assets/image/icon/icon_cv.jpg" alt="Aperçu du CV" class="cv-preview" />
                         </div>
                     </div>
                 </div>
