--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -271,7 +271,7 @@
                         <div class="cv-section">
                             <div class="cv-content">
                                 <h2>Mon CV</h2>
-                                <button class="cv-button" onclick="window.open('assets/pdf/CV.pdf', '_blank')">
+                                <button class="cv-button" onclick="window.open('assets/pdf/sans_tel_CV.pdf', '_blank')">
                                     Télécharger mon CV
                                 </button>
                             </div>
