--- a/fate/index.html
+++ b/fate/index.html
@@ -2,6 +2,8 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8" />
+  <meta name="robots" content="noindex, nofollow">
+
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Fate/Strange Fake – Countdown</title>
   <link rel="preload" href="image1.jpg" as="image" />
