--- a/index.html
+++ b/index.html
@@ -35,8 +35,6 @@
   </style>
 </head>
 <body>
-  <h1>Bienvenue sur melroi.fr</h1>
-  <p>Site en construction.</p>
-  <a href="sae/infra.html" class="big-link">Accéder à la page SAE</a>
+  <h1>melroi.fr</h1>
 </body>
 </html>
