--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="noindex, nofollow">
     <title>Melchior HADROT</title>
     <link rel="stylesheet" href="/portfolio/styles.css">
     <script src="/portfolio/script.js" defer></script>
