--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -67,7 +67,7 @@
                     <p>
                         <strong>2024 - Présent</strong><br>
                         IUT Clermont Auvergne site d'Aubière - Clermont-Ferrand (63)<br>
-                        En première année de BUT R&T (Bachelor Universitaire de Technologie en Réseaux et
+                        En seconde année de BUT R&T (Bachelor Universitaire de Technologie en Réseaux et
                         Télécommunications).
                     </p>
                 </div>
