--- a/portfolio/projet-integratif/SAE24/tel.html
+++ b/portfolio/projet-integratif/SAE24/tel.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html lang="fr">
 <head>
-    <meta name='robots' content='noindex, nofollow'>
+  <meta name="robots" content="noindex, nofollow">
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Compte rendu projet</title>
