--- a/portfolio/projet-integratif/client/activitean.html
+++ b/portfolio/projet-integratif/client/activitean.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta name='robots' content='noindex, nofollow'>
+  <meta name="robots" content="noindex, nofollow">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>EC AUTO - Home</title>
