--- a/portfolio/projet-integratif/index.html
+++ b/portfolio/projet-integratif/index.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html lang="fr">
 <head>
-    <meta name='robots' content='noindex, nofollow'>
+  <meta name="robots" content="noindex, nofollow">
   <meta charset="UTF-8">
   <title>Page de redirection</title>
   <style>
